@@ -1,5 +1,7 @@
 package eu.domibus.connector.controller.queues;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import eu.domibus.connector.controller.processor.CleanupMessageProcessor;
 import eu.domibus.connector.controller.processor.EvidenceMessageProcessor;
 import eu.domibus.connector.controller.processor.ToBackendBusinessMessageProcessor;
@@ -13,6 +15,11 @@ import eu.domibus.connector.controller.service.SubmitToLinkService;
 import eu.domibus.connector.domain.model.DomibusConnectorMessage;
 import eu.domibus.connector.domain.model.DomibusConnectorMessageId;
 import eu.domibus.connector.domain.testutil.DomainEntityCreator;
+import java.util.List;
+import javax.jms.ConnectionFactory;
+import javax.jms.JMSException;
+import javax.jms.Message;
+import javax.jms.Queue;
 import org.apache.activemq.artemis.jms.client.ActiveMQQueue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
@@ -29,32 +36,62 @@ import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.support.TransactionTemplate;
 
-import javax.jms.ConnectionFactory;
-import javax.jms.JMSException;
-import javax.jms.Message;
-import javax.jms.Queue;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-@SpringBootTest(classes = {ListMessagesInQueueTest.MyTestContext.class}, properties = {"spring.liquibase.enabled=false"})
+@SuppressWarnings("squid:S1135")
+@SpringBootTest(
+    classes = {ListMessagesInQueueTest.MyTestContext.class},
+    properties = {"spring.liquibase.enabled=false"}
+)
 @ActiveProfiles({"test", "jms-test"})
 @DirtiesContext
-@Disabled //TODO: find solution so all tests can run in same spring test context, or reduce spring context size
-public class ListMessagesInQueueTest {
-
-    @SpringBootApplication
-    public static class MyTestContext {
-        @Bean("TestQueue1")
-        public Queue createTestQueue1() {
-            return new ActiveMQQueue("q1");
-        }
-
-        @Bean("TestDlq1")
-        public Queue createTestDlq1() {
-            return new ActiveMQQueue("dlq1");
-        }
-    }
+@Disabled
+// TODO: find solution so all tests can run in same spring test context,
+//  or reduce spring context size
+class ListMessagesInQueueTest {
+    @Autowired
+    @Qualifier("TestQueue1")
+    Queue q1;
+    @Autowired
+    @Qualifier("TestDlq1")
+    Queue dlq1;
+    @MockBean
+    SubmitToLinkService submitToLinkService;
+    @MockBean
+    SubmitToConnector submitToConnector;
+    @MockBean
+    EvidenceMessageProcessor evidenceMessageProcessor;
+    @MockBean
+    ToBackendBusinessMessageProcessor toBackendBusinessMessageProcessor;
+    @MockBean
+    ToGatewayBusinessMessageProcessor toGatewayBusinessMessageProcessor;
+    @MockBean
+    ToLinkPartnerListener toLinkPartnerListener;
+    @MockBean
+    CleanupMessageProcessor cleanupMessageProcessor;
+    @Autowired
+    ToLinkQueue toLinkQueueProducer;
+    @Autowired
+    ToConnectorQueue toConnectorQueueProducer;
+    @Autowired
+    ToCleanupQueue toCleanupQueueProducer;
+    @Autowired
+    QueuesConfigurationProperties queuesConfigurationProperties;
+    @Autowired
+    TransactionTemplate txTemplate;
+    @Autowired
+    JmsTemplate nonXaJmsTemplate;
+    @Autowired
+    MessageConverter converter;
+    // Inject the primary (XA aware) ConnectionFactory
+    @Autowired
+    private ConnectionFactory defaultConnectionFactory;
+    // Inject the XA aware ConnectionFactory (uses the alias and injects the same as above)
+    @Autowired
+    @Qualifier("xaJmsConnectionFactory")
+    private ConnectionFactory xaConnectionFactory;
+    // Inject the non-XA aware ConnectionFactory
+    @Autowired
+    @Qualifier("nonXaJmsConnectionFactory")
+    private ConnectionFactory nonXaConnectionFactory;
 
     @BeforeEach
     public void beforeEach() {
@@ -62,73 +99,8 @@ public class ListMessagesInQueueTest {
         nonXaJmsTemplate.setMessageConverter(converter);
     }
 
-    @Autowired
-    @Qualifier("TestQueue1")
-    Queue q1;
-
-    @Autowired
-    @Qualifier("TestDlq1")
-    Queue dlq1;
-
-    @MockBean
-    SubmitToLinkService submitToLinkService;
-
-    @MockBean
-    SubmitToConnector submitToConnector;
-
-    @MockBean
-    EvidenceMessageProcessor evidenceMessageProcessor;
-
-    @MockBean
-    ToBackendBusinessMessageProcessor toBackendBusinessMessageProcessor;
-
-    @MockBean
-    ToGatewayBusinessMessageProcessor toGatewayBusinessMessageProcessor;
-
-    @MockBean
-    ToLinkPartnerListener toLinkPartnerListener;
-
-    @MockBean
-    CleanupMessageProcessor cleanupMessageProcessor;
-
-    @Autowired
-    ToLinkQueue toLinkQueueProducer;
-
-    @Autowired
-    ToConnectorQueue toConnectorQueueProducer;
-
-
-    @Autowired
-    ToCleanupQueue toCleanupQueueProducer;
-
-    @Autowired
-    QueuesConfigurationProperties queuesConfigurationProperties;
-
-    @Autowired
-    TransactionTemplate txTemplate;
-
-    // Inject the primary (XA aware) ConnectionFactory
-    @Autowired
-    private ConnectionFactory defaultConnectionFactory;
-
-    // Inject the XA aware ConnectionFactory (uses the alias and injects the same as above)
-    @Autowired
-    @Qualifier("xaJmsConnectionFactory")
-    private ConnectionFactory xaConnectionFactory;
-
-    // Inject the non-XA aware ConnectionFactory
-    @Autowired
-    @Qualifier("nonXaJmsConnectionFactory")
-    private ConnectionFactory nonXaConnectionFactory;
-
-    @Autowired
-    JmsTemplate nonXaJmsTemplate;
-
-    @Autowired
-    MessageConverter converter;
-
     @Test
-    public void it_is_possible_to_retrieve_all_messages_that_are_on_the_dlq() throws JMSException {
+    void it_is_possible_to_retrieve_all_messages_that_are_on_the_dlq() throws JMSException {
 
         // Arrange
         final QueueHelper sut = new QueueHelper(q1, dlq1, nonXaJmsTemplate);
@@ -140,7 +112,35 @@ public class ListMessagesInQueueTest {
         final List<Message> messages = sut.listAllMessagesInDlq();
 
         // Assert
-        final DomibusConnectorMessage domainMsg = (DomibusConnectorMessage) converter.fromMessage(messages.get(0)); // convert jms to domain msg
+        final DomibusConnectorMessage domainMsg = (DomibusConnectorMessage) converter.fromMessage(
+            messages.getFirst()); // convert jms to domain msg
         assertThat(domainMsg.getConnectorMessageId().getConnectorMessageId()).isEqualTo("msg1");
+    }
+
+    /**
+     * The MyTestContext class is responsible for defining the configuration for the test context.
+     * It is annotated with @SpringBootApplication to indicate that it is a Spring Boot application.
+     *
+     * <p>The class provides two methods that define beans:
+     *
+     * <p>1. createTestQueue1():
+     * - Returns a Queue bean named "TestQueue1".
+     * - The implementation creates a new instance of ActiveMQQueue with the name "q1".
+     *
+     * <p>2. createTestDlq1():
+     * - Returns a Queue bean named "TestDlq1".
+     * - The implementation creates a new instance of ActiveMQQueue with the name "dlq1".
+     */
+    @SpringBootApplication
+    public static class MyTestContext {
+        @Bean("TestQueue1")
+        public Queue createTestQueue1() {
+            return new ActiveMQQueue("q1");
+        }
+
+        @Bean("TestDlq1")
+        public Queue createTestDlq1() {
+            return new ActiveMQQueue("dlq1");
+        }
     }
 }
